# ubc-ml-pipeline

./: .gitignore  Makefile  README.md  pyproject.toml  report.md  requirements.txt
docs/: ARCHITECTURE.md
outputs/binary/: metrics.json
outputs/multiclass/: metrics.json
scripts/: make_pdf.py
src/: data.py  features.py  generate_synthetic.py  schema.py  train.py
tests/: test_pipeline.py
